--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -172,7 +172,7 @@
     <value>ВКонтакте</value>
   </data>
   <data name="CompleteResetSwitch" xml:space="preserve">
-    <value>Пропускать неизменившиеся тексты в опции «Опросить все»</value>
+    <value>Пропускать неизменившиеся тексты в опции «Обновить»</value>
   </data>
   <data name="CurlyTemplate" xml:space="preserve">
     <value>Не забудьте заменить элементы, заключённые в фигурные скобки, на то, что Вам нужно</value>
@@ -224,9 +224,9 @@
 
 3. Если я всё же где-то ошибусь (что немало вероятно), прошу также мне об этом сообщать. При таком названии группы не хочется ударять в грязь лицом.
 
-4. Мы следуем Политике сообществ (https://vk.com/@rdaaow_fupl-scp). Поэтому рекламы в обозримом будущем здесь не будет. Да и комментарии тут ни к чему. Но советы, пожелания и конструктивная критика приветствуются.
+4. Мы следуем Политике сообществ (https://vk.com/@rdaaow_fupl-scp). Поэтому рекламы в обозримом будущем здесь не будет. Да и комментарии тут ни к чему. Но советы, пожелания и конструктивная критика приветствуются. Поэтому Вы всегда можете отправить сообществу сообщение.
 
-Очень надеюсь, что Вам понравится относительно грамотный юмор!
+P.S. Очень надеюсь, что Вам понравится юмор, который почти не подчёркивается Word'ом!
 С уважением, Nicolay B. aka RD AAOW</value>
   </data>
   <data name="LanguageLabel" xml:space="preserve">
@@ -333,9 +333,7 @@
     <value>Откуда следует получить настройки:</value>
   </data>
   <data name="Tip01" xml:space="preserve">
-    <value>Добро пожаловать в UniNotifier! Здесь Вы можете настроить службу уведомлений.
-
-Переход к этим настройкам и журналу оповещений будет приостанавливать фоновую службу, наблюдающую за обновлениями. Она продолжит работу после закрытия / сворачивания приложения</value>
+    <value>Добро пожаловать в UniNotifier! Здесь Вы можете настроить службу новостей и сами уведомления</value>
   </data>
   <data name="Tip02_1" xml:space="preserve">
     <value>Внимание!
@@ -370,6 +368,15 @@
     <value>Данная опция при работе от аккумулятора позволяет автоматически обновлять состояние оповещений при разблокировке устройства.
 Заданный при этом период обновления будет действовать только при активном экране; в режиме ожидания он будет игнорироваться.
 При подключённом зарядном устройстве данная опция не будет иметь эффекта</value>
+  </data>
+  <data name="Tip04_13" xml:space="preserve">
+    <value>Если этот флажок включён, фоновая служба запустится и начнёт наблюдение, как только это приложение будет закрыто или свёрнуто. При повторном запуске приложения служба будет приостанавливаться для корректного применения настроек</value>
+  </data>
+  <data name="Tip04_14" xml:space="preserve">
+    <value>Если этот флажок включён, при ручном обновлении записей (с помощью кнопки «Обновить» на закреплённом оповещении) будут отображаться только те оповещения, состояние которых изменилось с последнего опроса</value>
+  </data>
+  <data name="Tip04_15" xml:space="preserve">
+    <value>В некоторых случаях нужный участок веб-страницы оказывается на ней не первым, который ограничен заданными маркерами. Это поле позволяет указать, какое именно вхождение целевого участка (от начала страницы) следует отображать</value>
   </data>
   <data name="Tip04_2" xml:space="preserve">
     <value>Эта кнопка позволяет вам поделиться настройками текущего уведомления</value>
