--- a/src/UniNotifier_en_us.resx
+++ b/src/UniNotifier_en_us.resx
@@ -210,4 +210,36 @@ In addition, the utility automatically requests new records with specified updat
   <data name="SettingsForm_SpecialNotifications" xml:space="preserve">
     <value>Enable special notifications</value>
   </data>
+  <data name="Tip_00" xml:space="preserve">
+    <value>Welcome to UniNotifier! Here you can configure the news service and notifications themselves. Some buttons and fields contain useful tips that will be shown once.
+
+Detailed instructions for setting up the service are available on YouTube button in app info window)</value>
+  </data>
+  <data name="Tip_01" xml:space="preserve">
+    <value>This button allows you to apply changes performed on the right side of window to the currently selected notification</value>
+  </data>
+  <data name="Tip_02" xml:space="preserve">
+    <value>This button allows you to add new notification with settings presented on the right side of window</value>
+  </data>
+  <data name="Tip_03" xml:space="preserve">
+    <value>This button allows you to remove selected notification</value>
+  </data>
+  <data name="Tip_04" xml:space="preserve">
+    <value>This button allows you to load settings from notification template</value>
+  </data>
+  <data name="Tip_05" xml:space="preserve">
+    <value>This button allows you to automatically find delimiters for the new notification (see user manual for details)</value>
+  </data>
+  <data name="Tip_06" xml:space="preserve">
+    <value>This section allows you to select the notification, the source of which will be opened in browser</value>
+  </data>
+  <data name="Tip_07" xml:space="preserve">
+    <value>This field allows you to select notification for configuring</value>
+  </data>
+  <data name="Tip_08" xml:space="preserve">
+    <value>When you'll close this window, the background service will start and begin monitoring. When you call settings interface again, the service will be paused for its correct configuration</value>
+  </data>
+  <data name="Tip_09" xml:space="preserve">
+    <value>In some cases, the needed part of web page is not the first on it, which is limited by the specified markers. This field allows you to specify which occurrence of the target area (from the top of page) should be displayed</value>
+  </data>
 </root>
