--- a/src/UniNotifier_ru_ru.resx
+++ b/src/UniNotifier_ru_ru.resx
@@ -232,4 +232,36 @@
   <data name="SettingsForm_SpecialNotifications" xml:space="preserve">
     <value>Добавить оповещения с tablepedia.ru</value>
   </data>
+  <data name="Tip_00" xml:space="preserve">
+    <value>Добро пожаловать в UniNotifier! Здесь вы можете настроить новостной сервис и сами уведомления. Некоторые кнопки и поля содержат полезные подсказки, которые будут показаны однократно.
+
+Подробные инструкции по настройке сервиса доступны на YouTube (кнопка в окне сведений о приложении)</value>
+  </data>
+  <data name="Tip_01" xml:space="preserve">
+    <value>Эта кнопка позволяет применить изменения, выполненные в правой части окна, к текущему выбранному уведомлению</value>
+  </data>
+  <data name="Tip_02" xml:space="preserve">
+    <value>Эта кнопка позволяет добавить новое уведомление с настройками, представленными в правой части окна</value>
+  </data>
+  <data name="Tip_03" xml:space="preserve">
+    <value>Эта кнопка позволяет удалить выбранное уведомление</value>
+  </data>
+  <data name="Tip_04" xml:space="preserve">
+    <value>Эта кнопка позволяет загрузить настройки из шаблона уведомления</value>
+  </data>
+  <data name="Tip_05" xml:space="preserve">
+    <value>Эта кнопка позволяет автоматически находить разделители для нового уведомления (подробности см. в руководстве пользователя)</value>
+  </data>
+  <data name="Tip_06" xml:space="preserve">
+    <value>В этом разделе можно выбрать уведомление, источник которого будет открыт в браузере</value>
+  </data>
+  <data name="Tip_07" xml:space="preserve">
+    <value>В этом поле можно выбрать уведомление для настройки</value>
+  </data>
+  <data name="Tip_08" xml:space="preserve">
+    <value>Когда вы закроете это окно, запустится фоновая служба, и начнётся мониторинг. При повторном вызове интерфейса настроек служба будет приостановлена для правильной настройки</value>
+  </data>
+  <data name="Tip_09" xml:space="preserve">
+    <value>В некоторых случаях нужная часть веб-страницы оказывается на ней не первой среди ограниченный указанными маркерами. Это поле позволяет указать, какое вхождение целевой области (сверху страницы) должно отображаться</value>
+  </data>
 </root>
