--- a/src/UniNotifier_ru_ru.resx
+++ b/src/UniNotifier_ru_ru.resx
@@ -264,4 +264,13 @@
   <data name="Tip_09" xml:space="preserve">
     <value>В некоторых случаях нужная часть веб-страницы оказывается на ней не первой среди ограниченный указанными маркерами. Это поле позволяет указать, какое вхождение целевой области (сверху страницы) должно отображаться</value>
   </data>
+  <data name="NoTemplateInClipboard" xml:space="preserve">
+    <value>В буфере обмена не найдено совместимых шаблонов уведомлений. Скопируйте строку шаблона в буфер обмена и попробуйте ещё раз</value>
+  </data>
+  <data name="Tip_10" xml:space="preserve">
+    <value>Эта кнопка позволяет поделиться настройками текущего уведомления (скопировать их в буфер обмена)</value>
+  </data>
+  <data name="Tip_11" xml:space="preserve">
+    <value>Эта кнопка позволяет загружать настройки из буфера обмена</value>
+  </data>
 </root>
