--- a/src/android/UniNotifier_en_us.resx
+++ b/src/android/UniNotifier_en_us.resx
@@ -329,7 +329,7 @@
     <value>• Some devices are requiring manual unlocking of internet access (f.e., in case of internet traffic saving mode) for the app. Check it if you will not get notifications</value>
   </data>
   <data name="Tip03" xml:space="preserve">
-    <value>Detailed instructions for setting up the service are available on YouTube. Swipe to the right of this screen to app details page and select the video user guide.
+    <value>Detailed instructions for setting up the service are available on YouTube. Swipe to the right of this screen to app details page and select the user guide.
 
 The notifications log is available on the left of this settings screen</value>
   </data>
