--- a/src/UniNotifier_en_us.resx
+++ b/src/UniNotifier_en_us.resx
@@ -207,9 +207,6 @@ In addition, the utility automatically requests new records with specified updat
   <data name="AlreadyStarted" xml:space="preserve">
     <value>{0:S} is already running</value>
   </data>
-  <data name="SettingsForm_SpecialNotifications" xml:space="preserve">
-    <value>Enable special notifications</value>
-  </data>
   <data name="Tip_00" xml:space="preserve">
     <value>Welcome to UniNotifier! Here you can configure the news service and notifications themselves. Some buttons and fields contain useful tips that will be shown once.
 
@@ -250,5 +247,47 @@ Detailed instructions for setting up the service are available on YouTube button
   </data>
   <data name="Tip_11" xml:space="preserve">
     <value>This button allows you to load shared settings from clipboard</value>
+  </data>
+  <data name="SettingsForm_NotWizard" xml:space="preserve">
+    <value>Notifications wizard</value>
+  </data>
+  <data name="WizardFailure" xml:space="preserve">
+    <value>It looks like this site is not supported in UniNotifier. Try using a different keyword</value>
+  </data>
+  <data name="WizardSearch1" xml:space="preserve">
+    <value>Detecting markers...</value>
+  </data>
+  <data name="WizardSearch2" xml:space="preserve">
+    <value>Requesting text...</value>
+  </data>
+  <data name="WizardStep1" xml:space="preserve">
+    <value>Welcome to the notifications wizard!
+
+This function will help you to create a notification that UniNotifier can automatically poll.
+
+First, enter a link (URL) to the site from which you want to receive notifications</value>
+  </data>
+  <data name="WizardStep2" xml:space="preserve">
+    <value>Now enter a keyword.
+
+This word (or phrase) should be present right now in that part of the site that will change over time, which will be the source of text for notifications. The ideal would be a phrase that is present now only in this area or is first encountered on the site in it. The case of letters doesn't matter</value>
+  </data>
+  <data name="WizardStep3" xml:space="preserve">
+    <value>For the specified settings, the text below is received. If it meets your expectations, click OK to add the notification. Otherwise, click Retry and we'll try again</value>
+  </data>
+  <data name="WizardStep4" xml:space="preserve">
+    <value>For the specified settings, the text below is received. If it meets your expectations, click OK to add the notification. Otherwise, retry the action and try a different keyword</value>
+  </data>
+  <data name="WizardStep5" xml:space="preserve">
+    <value>It's ready! Now specify the name of notification to be displayed in the main log</value>
+  </data>
+  <data name="CancelButton" xml:space="preserve">
+    <value>&amp;Cancel</value>
+  </data>
+  <data name="NextButton" xml:space="preserve">
+    <value>&amp;Next</value>
+  </data>
+  <data name="RetryButton" xml:space="preserve">
+    <value>&amp;Retry</value>
   </data>
 </root>
